Dyntopo Claystrips crashes on certain meshes #46692

Closed
opened 2015-11-04 12:53:00 +01:00 by lauri järvenpää · 7 comments

System Information
MacBook Pro (Retina, 15-inch, Mid 2014)
OSX El Capitan 10.11.1 (15B42)
NVIDIA GeForce GT 750M 2048 MB
Wacom Intuos

Blender Version
Broken: 2.76 48f7dd6

Short description of error
Blender crashes always either instantly or anyway very quickly during Dyntopo sculpting when using clay strips to eat away the thin mesh edge. Clay strips is set to accumulate and has auto-strength disabled. Brush detail is on.

Exact steps for others to reproduce the error
crashtest.blend

  • enable dyntopo (brush detail)
  • select claystrips and try to eat away the edge of the mesh (with control-draw)

Crash

Blender 2.76 (sub 0), Commit date: 2015-10-11 06:55, Hash 48f7dd6

bpy.ops.sculpt.sculptmode_toggle() # Operator
bpy.ops.sculpt.dynamic_topology_toggle() # Operator
bpy.ops.wm.radial_control(data_path_primary="tool_settings.sculpt.brush.size", data_path_secondary="tool_settings.unified_paint_settings.size", use_secondary="tool_settings.unified_paint_settings.use_unified_size", rotation_path="tool_settings.sculpt.brush.texture_slot.angle", color_path="tool_settings.sculpt.brush.cursor_color_add", fill_color_path="", zoom_path="", image_id="tool_settings.sculpt.brush", secondary_tex=False) # Operator
bpy.ops.wm.radial_control(data_path_primary="tool_settings.sculpt.brush.size", data_path_secondary="tool_settings.unified_paint_settings.size", use_secondary="tool_settings.unified_paint_settings.use_unified_size", rotation_path="tool_settings.sculpt.brush.texture_slot.angle", color_path="tool_settings.sculpt.brush.cursor_color_add", fill_color_path="", zoom_path="", image_id="tool_settings.sculpt.brush", secondary_tex=False) # Operator
bpy.ops.wm.radial_control(data_path_primary="tool_settings.sculpt.brush.size", data_path_secondary="tool_settings.unified_paint_settings.size", use_secondary="tool_settings.unified_paint_settings.use_unified_size", rotation_path="tool_settings.sculpt.brush.texture_slot.angle", color_path="tool_settings.sculpt.brush.cursor_color_add", fill_color_path="", zoom_path="", image_id="tool_settings.sculpt.brush", secondary_tex=False) # Operator
bpy.ops.wm.radial_control(data_path_primary="tool_settings.sculpt.brush.size", data_path_secondary="tool_settings.unified_paint_settings.size", use_secondary="tool_settings.unified_paint_settings.use_unified_size", rotation_path="tool_settings.sculpt.brush.texture_slot.angle", color_path="tool_settings.sculpt.brush.cursor_color_add", fill_color_path="", zoom_path="", image_id="tool_settings.sculpt.brush", secondary_tex=False) # Operator

backtrace

0 blender 0x0000000100c9f7da BLI_system_backtrace + 58
1 blender 0x000000010017a79b blender_crash_handler_backtrace + 43
2 blender 0x000000010017a253 blender_crash_handler + 659
3 libsystem_platform.dylib 0x00007fff995da52a _sigtramp + 26
4 ??? 0x0000000115606710 0x0 + 4653606672
5 blender 0x000000010092b339 long_edge_queue_face_add + 233
6 blender 0x0000000100929f2c BKE_pbvh_bmesh_update_topology + 3404
7 blender 0x000000010035ea54 sculpt_topology_update + 388
8 blender 0x00000001003766da do_tiled + 410
9 blender 0x000000010035e6e3 do_symmetrical_brush_actions + 1427
10 blender 0x000000010035cf6a sculpt_stroke_update_step + 2394
11 blender 0x000000010034f250 paint_brush_stroke_add_step + 2512
12 blender 0x000000010034e815 paint_space_stroke + 1333
13 blender 0x000000010034dc88 paint_stroke_modal + 4936
14 blender 0x0000000100186851 wm_handler_operator_call + 593
15 blender 0x00000001001862cb wm_handlers_do_intern + 1435
16 blender 0x0000000100183229 wm_handlers_do + 25
17 blender 0x000000010018273a wm_event_do_handlers + 890
18 blender 0x000000010017d6e0 WM_main + 32
19 blender 0x00000001001790a7 main + 1591
20 blender 0x0000000100001d34 start + 52
21 ??? 0x0000000000000001 0x0 + 1

**System Information** MacBook Pro (Retina, 15-inch, Mid 2014) OSX El Capitan 10.11.1 (15B42) NVIDIA GeForce GT 750M 2048 MB Wacom Intuos **Blender Version** Broken: 2.76 48f7dd6 **Short description of error** Blender crashes always either instantly or anyway very quickly during Dyntopo sculpting when using clay strips to eat away the thin mesh edge. Clay strips is set to accumulate and has auto-strength disabled. Brush detail is on. **Exact steps for others to reproduce the error** [crashtest.blend](https://archive.blender.org/developer/F251495/crashtest.blend) - enable dyntopo (brush detail) - select claystrips and try to eat away the edge of the mesh (with control-draw) **Crash** # Blender 2.76 (sub 0), Commit date: 2015-10-11 06:55, Hash 48f7dd6 bpy.ops.sculpt.sculptmode_toggle() # Operator bpy.ops.sculpt.dynamic_topology_toggle() # Operator bpy.ops.wm.radial_control(data_path_primary="tool_settings.sculpt.brush.size", data_path_secondary="tool_settings.unified_paint_settings.size", use_secondary="tool_settings.unified_paint_settings.use_unified_size", rotation_path="tool_settings.sculpt.brush.texture_slot.angle", color_path="tool_settings.sculpt.brush.cursor_color_add", fill_color_path="", zoom_path="", image_id="tool_settings.sculpt.brush", secondary_tex=False) # Operator bpy.ops.wm.radial_control(data_path_primary="tool_settings.sculpt.brush.size", data_path_secondary="tool_settings.unified_paint_settings.size", use_secondary="tool_settings.unified_paint_settings.use_unified_size", rotation_path="tool_settings.sculpt.brush.texture_slot.angle", color_path="tool_settings.sculpt.brush.cursor_color_add", fill_color_path="", zoom_path="", image_id="tool_settings.sculpt.brush", secondary_tex=False) # Operator bpy.ops.wm.radial_control(data_path_primary="tool_settings.sculpt.brush.size", data_path_secondary="tool_settings.unified_paint_settings.size", use_secondary="tool_settings.unified_paint_settings.use_unified_size", rotation_path="tool_settings.sculpt.brush.texture_slot.angle", color_path="tool_settings.sculpt.brush.cursor_color_add", fill_color_path="", zoom_path="", image_id="tool_settings.sculpt.brush", secondary_tex=False) # Operator bpy.ops.wm.radial_control(data_path_primary="tool_settings.sculpt.brush.size", data_path_secondary="tool_settings.unified_paint_settings.size", use_secondary="tool_settings.unified_paint_settings.use_unified_size", rotation_path="tool_settings.sculpt.brush.texture_slot.angle", color_path="tool_settings.sculpt.brush.cursor_color_add", fill_color_path="", zoom_path="", image_id="tool_settings.sculpt.brush", secondary_tex=False) # Operator # backtrace 0 blender 0x0000000100c9f7da BLI_system_backtrace + 58 1 blender 0x000000010017a79b blender_crash_handler_backtrace + 43 2 blender 0x000000010017a253 blender_crash_handler + 659 3 libsystem_platform.dylib 0x00007fff995da52a _sigtramp + 26 4 ??? 0x0000000115606710 0x0 + 4653606672 5 blender 0x000000010092b339 long_edge_queue_face_add + 233 6 blender 0x0000000100929f2c BKE_pbvh_bmesh_update_topology + 3404 7 blender 0x000000010035ea54 sculpt_topology_update + 388 8 blender 0x00000001003766da do_tiled + 410 9 blender 0x000000010035e6e3 do_symmetrical_brush_actions + 1427 10 blender 0x000000010035cf6a sculpt_stroke_update_step + 2394 11 blender 0x000000010034f250 paint_brush_stroke_add_step + 2512 12 blender 0x000000010034e815 paint_space_stroke + 1333 13 blender 0x000000010034dc88 paint_stroke_modal + 4936 14 blender 0x0000000100186851 wm_handler_operator_call + 593 15 blender 0x00000001001862cb wm_handlers_do_intern + 1435 16 blender 0x0000000100183229 wm_handlers_do + 25 17 blender 0x000000010018273a wm_event_do_handlers + 890 18 blender 0x000000010017d6e0 WM_main + 32 19 blender 0x00000001001790a7 main + 1591 20 blender 0x0000000100001d34 start + 52 21 ??? 0x0000000000000001 0x0 + 1

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @hevonen

Added subscriber: @hevonen

Same crash happens with clay tool also. Something around the front edge of that mesh causes dyntopo to die.

Same crash happens with clay tool also. Something around the front edge of that mesh causes dyntopo to die.

More:
Dyntopo creates non-manifold vertices when it converts quads to tris. Triangulating the mesh manually with "beauty" -option before entering dyntopo doesn't generate non-manifold vertices and prevents the crash.

Triangulating the mesh manually with "fixed" -option creates the same non-manifold mesh as dyntopo does when it is enabled. Blender crashes when dyntopo sculpt brush touches this non-manifold area.

Obvious fix would be to either fix the triangulation method or set Dyntopo to use beauty triangulation instead.

More: Dyntopo creates non-manifold vertices when it converts quads to tris. Triangulating the mesh manually with "beauty" -option before entering dyntopo doesn't generate non-manifold vertices and prevents the crash. Triangulating the mesh manually with "fixed" -option creates the same non-manifold mesh as dyntopo does when it is enabled. Blender crashes when dyntopo sculpt brush touches this non-manifold area. Obvious fix would be to either fix the triangulation method or set Dyntopo to use beauty triangulation instead.
Campbell Barton self-assigned this 2015-11-04 18:25:21 +01:00
Campbell Barton changed title from Dyntopo Claystrips instacrash on OSX to Dyntopo Claystrips crashes with on certain meshes 2015-11-04 18:25:41 +01:00
Campbell Barton changed title from Dyntopo Claystrips crashes with on certain meshes to Dyntopo Claystrips crashes on certain meshes 2015-11-04 18:25:53 +01:00

This issue was referenced by 0f769afe07

This issue was referenced by 0f769afe07f96efa7ec6325453c4f04ea391f112

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Also use beauty triangulate, 131c2a2bef

Also use beauty triangulate, 131c2a2bef
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46692
No description provided.