Fix T46692: Triangulate creates duplicate faces

Caused a crash in dyntopo.